fixing z-index

--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -32,7 +32,7 @@
 		padding: 2em;
 		@include flex(flex, column, center, center);
 		text-align: center;
-		z-index: 10;
+		z-index: 5;
 		background-color: $section-container-color;
 
 		& .project__title {
